syntax = "proto3";
package flywheel.health;

import "google/protobuf/timestamp.proto";

service HealthService {
    rpc GetHealth(GetHealthRequest) returns (GetHealthResponse);
    rpc GetPipelineHealth(GetPipelineHealthRequest) returns (GetPipelineHealthResponse);
    rpc GetDriftStatus(GetDriftStatusRequest) returns (GetDriftStatusResponse);
    rpc ListDriftEvents(ListDriftEventsRequest) returns (ListDriftEventsResponse);
}

message GetHealthRequest {}

message GetHealthResponse {
    string status = 1;
    string version = 2;
    google.protobuf.Timestamp uptime_since = 3;
    int32 active_pipelines = 4;
    int32 registered_models = 5;
    DatabaseHealth database = 6;
}

message DatabaseHealth {
    bool connected = 1;
    uint64 latency_ms = 2;
    int32 active_connections = 3;
}

message GetPipelineHealthRequest {
    string pipeline_id = 1;
}

message GetPipelineHealthResponse {
    string pipeline_id = 1;
    string status = 2;
    PipelineMetrics metrics = 3;
    repeated StageHealth stages = 4;
    DriftSummary drift = 5;
}

message PipelineMetrics {
    double records_per_second = 1;
    double predictions_per_second = 2;
    double error_rate = 3;
    uint64 avg_latency_ms = 4;
    uint64 p99_latency_ms = 5;
    double current_accuracy = 6;
    double feedback_rate = 7;
}

message StageHealth {
    string stage_id = 1;
    string stage_type = 2;
    string status = 3;
    uint64 records_processed = 4;
    uint64 records_failed = 5;
    uint64 avg_latency_ms = 6;
}

message DriftSummary {
    bool is_drifted = 1;
    string severity = 2;
    double psi_score = 3;
    double kl_divergence = 4;
    double accuracy_delta = 5;
    google.protobuf.Timestamp last_checked = 6;
}

message GetDriftStatusRequest {
    string pipeline_id = 1;
    string model_id = 2;
}

message GetDriftStatusResponse {
    string pipeline_id = 1;
    string model_id = 2;
    bool is_drifted = 3;
    string drift_type = 4;
    string severity = 5;
    StatisticalDrift statistical = 6;
    PerformanceDrift performance = 7;
    google.protobuf.Timestamp detected_at = 8;
}

message StatisticalDrift {
    double psi_score = 1;
    double kl_divergence = 2;
    repeated FeatureDrift feature_drifts = 3;
}

message FeatureDrift {
    string feature_name = 1;
    double psi_score = 2;
    double kl_divergence = 3;
    bool is_drifted = 4;
    string direction = 5;
}

message PerformanceDrift {
    double accuracy = 1;
    double accuracy_baseline = 2;
    double accuracy_delta = 3;
    double precision = 4;
    double recall = 5;
    uint64 latency_p99_ms = 6;
    double error_rate = 7;
}

message ListDriftEventsRequest {
    string pipeline_id = 1;
    string model_id = 2;
    int32 limit = 3;
    string cursor = 4;
    google.protobuf.Timestamp since = 5;
}

message ListDriftEventsResponse {
    repeated DriftEvent events = 1;
    string next_cursor = 2;
}

message DriftEvent {
    string event_id = 1;
    string pipeline_id = 2;
    string model_id = 3;
    string drift_type = 4;
    string severity = 5;
    double psi_score = 6;
    double kl_divergence = 7;
    double accuracy_delta = 8;
    google.protobuf.Timestamp detected_at = 9;
    google.protobuf.Timestamp resolved_at = 10;
}
